--- a/arch/arm/configs/kobo_defconfig
+++ b/arch/arm/configs/kobo_defconfig
@@ -178,7 +178,6 @@ CONFIG_DRM_PANEL_SEIKO_43WVF1G=y
 CONFIG_DRM_DW_HDMI_CEC=y
 CONFIG_DRM_MXSFB=y
 CONFIG_DRM_MXC_EPDC=m
-
 CONFIG_FB_MODE_HELPERS=y
 CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_LCD_L4F00242T03=y
@@ -323,6 +322,11 @@ CONFIG_PROVE_LOCKING=y
 # CONFIG_DEBUG_BUGVERBOSE is not set
 # CONFIG_FTRACE is not set
 CONFIG_FB=y
+CONFIG_FB_MXC=m
+CONFIG_FB_MXC_EINK_PANEL=m
+CONFIG_FB_MXC_EINK_V2_PANEL=m
+CONFIG_MXC_PXP_V2=y
+CONFIG_MXC_PXP_V3=y
 
 # Net stuff
 CONFIG_TUN=m
@@ -395,9 +399,35 @@ CONFIG_RTC_DRV_NTXEC=m
 CONFIG_MFD_SY7636=m
 CONFIG_REGULATOR_SY7636=m
 CONFIG_SENSORS_SY7636=m
+CONFIG_MFD_JD9930=m
+CONFIG_REGULATOR_JD9930=m
+CONFIG_SENSORS_JD9930=m
 CONFIG_GPIO_BD71815=m
 CONFIG_GPIO_BD71828=m
-CONFIG_MFD_ROHM_BD71828=m
+CONFIG_MFD_ROHM_BD71828=y
+CONFIG_RTC_DRV_BD70528=m
 CONFIG_REGULATOR_BD71815=m
-CONFIG_REGULATOR_BD71828=m
+CONFIG_REGULATOR_BD71828=y
 CONFIG_COMMON_CLK_BD718XX=m
+CONFIG_MWIFIEX=m
+CONFIG_MWIFIEX_SDIO=m
+CONFIG_TOUCHSCREEN_EDT_FT5X06=m
+
+# BT (found in clara2e)
+CONFIG_BT_AOSPEXT=y
+CONFIG_BT_BNEP=m
+CONFIG_BT_HCIBTSDIO=m
+CONFIG_BT_HCIBTUSB=m
+CONFIG_BT_HCIBTUSB_MTK=y
+CONFIG_BT_HCIUART_BCSP=y
+CONFIG_BT_HCIUART_LL=y
+CONFIG_BT_HCIUART=m
+CONFIG_BT_HCIUART_MRVL=y
+CONFIG_BT_HIDP=m
+CONFIG_BT_HS=y
+CONFIG_BT_LEDS=y
+CONFIG_BT=m
+CONFIG_BT_MSFTEXT=y
+CONFIG_BT_NXPUART=m
+CONFIG_BT_RFCOMM=m
+
